2024-02-02 Richard Frith-Macdonald <rfm@gnu.org>

	Source/NSString.m: Return empty string of correct class when loading
	from an empty file or URL.
	Source/Additions/GSMime.m: minor optimisation usng more efficient
	method to append headers to mutable data object.

2024-02-01 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSLocale.m: Fix -countryCode incorrectly returning language
	code.

2024-01-30 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m:
	* Source/GSPrivate.h:
	* Source/GSSocketStream.m:
	* Source/GSStream.m:
	* Source/unix/GSRunLoopCtxt.m:
	Make GSTcpTune options available to streams as well as file handles.
	Improve debug logging for streasm operations.
	Schedule streams in run loop on conclusion of TLS handshake (so we get
	events telling us to start again after a blocked write).

2024-01-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: patch for issue #366 by Larry Campbell.

2024-01-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSJSONSerialization.m: Fix for issue #365 ... don't try to
	create a string ending with the first half of a unicode surrogate pair.

2024-01-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationCenter.m: fix for memory leak should keep the
	observer retained until removed.

2023-12-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Replace GS_GENERIC macros in method types etc
	with the basic type name.
	* Tools/AGSIndex.h:
	* Tools/AGSIndex.m: Create index of all authors in the project

2023-12-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/objc-load.m:
	* Source/GSPrivate.h:
	In GSPrivateSymbolPath() check for dladdr returning argv[0] as the
	file path, and map it to the path of the executable so bundle checks
	for the location of the file containing the code can work consistently.

2023-12-09: Hugo Melder <contact@hugomelder.com>

	* Source/NSNull.m:
	Implement valueForUndefinedKey: and always return the NSNull singleton
	object.